# dev-tools

./: .gitignore  LICENSE.txt  README.md  jest.config.ts  package-lock.json  package.json  parse.ts  setup.cfg  setup.py  tsconfig.json
devtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: build.js
src/: lib.py  main.py  server.controller.ts  server.entity.ts  server.module.ts  server.service.ts  templates.py
src/cli/: Command.py  CommandBuilder.py  CommandTree.py
src/config/: ConfigCommands.py  ConfigProfile.py  ConfigRules.py  SmartConfig.py
src/main/: main.ts
src/main/cli/: Argument.ts  Command.ts  CommandBuilder.ts  CommandTree.ts  Flag.ts  Named.ts  Positional.ts  command-builder.ts  command-tree.ts  index.ts  types.ts
src/main/config/: config-commands.ts
src/main/error/: BuilderError.ts  file-error.ts  index.ts  traverse-error.ts
src/main/lib/: Logger.ts  case.ts  casing-manager.ts  command-base.ts  decorators.ts  file.ts  index.ts  template.ts  utils.ts
src/main/nest/: index.ts  nest-commands.ts  nest-templates.ts
src/main/react/: react-commands.ts
src/main/typescript/: typescript-commands.ts
src/nest/: NestCommands.py  NestTemplates.py  commands.py  templates.py
src/react/: commands.py  templates.py
src/test/cli/: Command.spec.ts
src/user/: ConfigureUser.py  UserSettings.py
src/util/: Console.py  FileSystem.py  ImportMeta.py  NameManager.py  TemplateBase.py  lib.py
team-role/: team-role.entity.ts
user/: package.json
