[metadata]
name = devtools
version = 0.1.0
author = Diego Chan
author_email = diego.chan@utp.ac.pa
description = Dev tools via CLI
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.7
install_requires =
    argparse

[options.entry_points]
console_scripts =
    devtools = src.main:main